# th3d

./: .gitignore  CMakeLists.txt  README.md
blibs/simple/: CMakeLists.txt  simple.cpp
docs/: bullets_file_faq.txt  test.bm.json_explenation.txt
include/: bmap.hpp  bmreader.hpp  bullet.hpp  camera.hpp  collision.hpp  engine.hpp  game.hpp  mcmap.hpp  pattern.hpp  player.hpp  shape.hpp  square.hpp  time.hpp  unit.hpp  utils.hpp
include/colliders/: boxcollider.hpp  collider.hpp
include/drawers/: cubedrawer.hpp  drawer.hpp
include/games/testgame/: testgame.hpp
include/mc/: mcmap.hpp
include/mc/nbt/: serialization.hpp
include/shapes/: cube.hpp  cubeshape.hpp  shape.hpp
resources/bmaps/cirno/: cirno.lua  perfect-freeze.lua  world.lua
resources/bmaps/cirno/Gensokyo/: level.dat_old
resources/bmaps/cirno/Gensokyo/DIM1/region/: r.0.0.mca
resources/bmaps/cirno/Gensokyo/region/: r.-1.-6.mca  r.-1.2.mca  r.-1.3.mca  r.-2.-6.mca  r.-2.2.mca  r.-3.-6.mca  r.-3.2.mca  r.-4.-6.mca  r.-5.-1.mca  r.-5.-3.mca  r.-5.-4.mca  r.-5.-5.mca  r.-5.-6.mca  r.-5.0.mca  r.-5.1.mca  r.0.-6.mca  r.0.2.mca  r.0.3.mca  r.1.-6.mca  r.1.2.mca  r.1.3.mca  r.2.-6.mca  r.2.2.mca  r.2.3.mca  r.3.-6.mca  r.3.2.mca  r.4.2.mca  r.4.3.mca  r.5.-1.mca  r.5.-2.mca  r.5.-3.mca  r.5.-4.mca  r.5.-5.mca  r.5.0.mca  r.5.1.mca  r.5.2.mca
resources/bmaps/cirno/Gensokyo/stats/: 6d95967d-328a-49b4-9e9e-b43f606230b7.json
resources/bmaps/cirno/shapes/: block.mtl
resources/bullets/: const.bm.json  test.bm.json  test_pos.cs.glsl
resources/bullets/cirno/: perfect-freeze.bm.json
resources/lua/cirno/: cirno.lua  perfect-freeze.lua
resources/shaders/: standard.fs.glsl  standard.vs.glsl
src/: bmap.cpp  bmreader.cpp  bullet.cpp  bullet.hpp  camera.cpp  camera.hpp  collision.cpp  cube.cpp  entity.hpp  game.cpp  game.hpp  main.cpp  mcmap.cpp  pattern.hpp  player.cpp  player.hpp  shape.cpp  shape.hpp  square.cpp  unit.hpp  utils.cpp
src/colliders/: boxcollider.cpp  boxcollider.hpp
src/drawers/: cubedrawer.cpp
src/games/testgame/: init_bmap.cpp  mvp.cpp  testgame.cpp  testgame.hpp  update_entities.cpp  update_player.cpp
src/mc/: do_chunk.cpp  do_region.cpp  mcmap.cpp
src/mc/nbt/: compression.cpp  nbt.cpp  serialization.cpp
src/pewpew/: compile.hpp  pewpew.cpp  pewpew.hpp
src/pewpew/ast/: ast.cpp  ast.hpp  ast_node.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/shapes/: cube.cpp
